[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Head.gd" type="Script" id=1]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://models/ak/AK-103.tscn" type="PackedScene" id=4]
[ext_resource path="res://models/hand/hand.obj" type="ArrayMesh" id=5]
[ext_resource path="res://textures/skin/human-skin-texture-59256368.jpg" type="Texture" id=6]
[ext_resource path="res://scripts/GunHolder.gd" type="Script" id=7]
[ext_resource path="res://scenes/GunShotPlayer.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=9]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 6 )
uv1_scale = Vector3( 0, 0, 0 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 3 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.7, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.13641, 0 )
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0 )
fov = 80.0
script = ExtResource( 2 )

[node name="HUD" parent="Head/Camera" instance=ExtResource( 9 )]

[node name="GunHolder" type="Spatial" parent="Head"]
script = ExtResource( 7 )

[node name="GunPointer" type="RayCast" parent="Head/GunHolder"]
enabled = true

[node name="AK-103" parent="Head/GunHolder" instance=ExtResource( 4 )]
transform = Transform( 1.03, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0.256, -0.39, 0.107 )

[node name="Hand" type="MeshInstance" parent="Head/GunHolder"]
transform = Transform( -0.00827151, 0, -0.00725136, 0, 0.01, 0, 0.00725136, 0, -0.00827151, 0.427, -0.175, 0.035 )
mesh = ExtResource( 5 )
material/0 = SubResource( 2 )

[node name="ShotDelay" type="Timer" parent="Head/GunHolder"]
one_shot = true

[node name="MuzzleFlashTimer" type="Timer" parent="Head/GunHolder"]
one_shot = true

[node name="GunShotPlayer" parent="Head/GunHolder" instance=ExtResource( 8 )]
volume_db = -43.417
pitch_scale = 0.54
[connection signal="timeout" from="Head/GunHolder/ShotDelay" to="Head/GunHolder" method="_on_ShotDelay_timeout"]
[connection signal="timeout" from="Head/GunHolder/MuzzleFlashTimer" to="Head/GunHolder" method="_on_MuzzleFlashTimer_timeout"]
